grammar.ebnf

Template = ParameterSection, {OtherSection} (* Every other section defined in the configuration needs to be there, or maybe it could be possible, to have optional and mandatory sections*)

ParameterSection = {ParameterHeadline, ParameterBody};

ParameterBody = ParameterStatement {, ParameterStatement};

ParameterStatement = ParameterPart, [Requires, ParameterPart]

ParameterPart = Identifier, "(", ValueList, ")"
ValueList = Value {, Value}
Value = "\"", {StringChar | IdentifierUsage}, "\"" (* Vielleicht kann man auch noch eine richtige ParameterUsage hier nutzen *)

IdentifierUsage = "{{", Identifier, "}}"

Output = "{{", (ParameterUsage | StringOutput), "}}"
ParameterUsage = Identifier [, CallPart],
CallPart = ".", Identifier, "(", Args, ")"
Args = [Argument, {",", Argument}]
Argument = ArgChar, {ArgChar}
StringOutput = "\"", StringChar, "\""


OtherSection = OtherHeadline, {BodyChar | Output | BlockComment} (* Eats up every succeeding whitespace *)

BlockComment = "{#", BodyChar, "#}" 

ParameterHeadline = "Parameter:", NEWLINE;

OtherHeadline = ? Every Headline, that was specified in the Configuration (ParserConfig) ?, ":", NEWLINE

Requires = "requires"

Identifier = ? Any number of alphabetic Unicode characters, no spaces ?

ArgChar = ? Any alphabetic or numeric Unicode character, no spaces?

StringChar = ? Any Unicode character, with escape sequence for double quotes ?

BodyChar = ? Like StringChar, but no escape sequences ? (* Block comment can be escaped with {{ "{#" }} *)
